interface client blog

--- a/src/app/client/clients-page/client-rent-room/client-rent-room.component.html
+++ b/src/app/client/clients-page/client-rent-room/client-rent-room.component.html
@@ -773,7 +773,7 @@
             </section>
             <section class="section section-whyus">
                 <div class="section-content">
-                    <h3>Tại sao lại chọn PhongTro123.com?</h3>
+                    <h3>Tại sao lại chọn PhongtroThanhXuan.com?</h3>
                     <p>Chúng tôi biết bạn có rất nhiều lựa chọn, nhưng Phongtro123.com tự hào là trang web đứng top google về các từ khóa: <a href="https://phongtro123.com/cho-thue-phong-tro" title="Cho thuê phòng trọ"><strong>cho thuê phòng trọ</strong></a>,
                         <strong>nhà
                             trọ</strong>, <a href="https://phongtro123.com/nha-cho-thue" title="Cho thuê nhà nguyên căn"><strong>thuê nhà nguyên căn</strong></a>, <a href="https://phongtro123.com/cho-thue-can-ho" title="Cho thuê căn hộ"><strong>cho thuê căn
