--- a/src/app/client/clients-page/client-roommates/client-roommates.component.html
+++ b/src/app/client/clients-page/client-roommates/client-roommates.component.html
@@ -975,7 +975,7 @@
             <section class="section section-whyus">
                 <div class="section-content">
                     <h3>Tại sao lại chọn PhongTro123.com?</h3>
-                    <p>Chúng tôi biết bạn có rất nhiều lựa chọn, nhưng Phongtro123.com tự hào là trang web đứng top
+                    <p>Chúng tôi biết bạn có rất nhiều lựa chọn, nhưng PhongtroThanhXuan.com tự hào là trang web đứng top
                         google về các từ khóa: <a href="https://phongtro123.com/cho-thue-phong-tro"
                             title="Cho thuê phòng trọ"><strong>cho thuê phòng trọ</strong></a>, <strong>nhà
                             trọ</strong>, <a href="https://phongtro123.com/nha-cho-thue"
