--- a/src/app/client/clients-page/detail-article/detail-article.component.html
+++ b/src/app/client/clients-page/detail-article/detail-article.component.html
@@ -738,8 +738,8 @@
             </section>
             <section class="section section-whyus">
                 <div class="section-content">
-                    <h3>Tại sao lại chọn PhongTro123.com?</h3>
-                    <p>Chúng tôi biết bạn có rất nhiều lựa chọn, nhưng Phongtro123.com tự hào là trang web đứng top
+                    <h3>Tại sao lại chọn PhongtroThanhXuan.com?</h3>
+                    <p>Chúng tôi biết bạn có rất nhiều lựa chọn, nhưng PhongtroThanhXuan.com tự hào là trang web đứng top
                         google về các từ khóa: <a href="https://phongtro123.com/cho-thue-phong-tro"
                             title="Cho thuê phòng trọ">
                             <strong>cho thuê phòng trọ ,nhà trọ</strong>
@@ -766,7 +766,7 @@
                     <h3>Chi phí thấp, hiệu quả tối đa</h3>
                     <div class="clearfix" style="display: flex; justify-content: center;"><span
                             class="star star-5"></span></div>
-                    <p class="testimonial">Trước khi biết website phongtro123, mình phải tốn nhiều công sức và chi phí
+                    <p class="testimonial">Trước khi biết website PhongtroThanhXuan, mình phải tốn nhiều công sức và chi phí
                         cho việc đăng tin cho thuê: từ việc phát tờ rơi, dán giấy, và đăng lên các website khác nhưng
                         hiệu quả không cao. Từ khi biết website phongtro123.com, mình đã thử đăng tin lên và đánh giá
                         hiệu quả khá cao trong khi chi phí khá thấp, không còn tình trạng phòng trống kéo dài - Anh
