--- a/src/app/client/clients-page/client-tutorial/client-tutorial.component.html
+++ b/src/app/client/clients-page/client-tutorial/client-tutorial.component.html
@@ -1,1 +1,79 @@
-<p>client-tutorial works!</p>
+<div id="trangchu" class="home home loaded ready">
+    <div id="webpage">
+        <!-- Header -->
+        <main id="main">
+            <div class="page404">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-7 col-sm-12 col-xs-12">
+                            <div class="page_404_header">
+                                <h1 class="title">Rất tiếc, có lỗi xảy ra</h1>
+                                <p>Vui lòng liên hệ phongtrothanhxuan@gmail.vn để báo lỗi này. Xin cảm ơn bạn đã support chúng tôi.
+                                </p>
+                            </div>
+                            <div class="page_404_content"></div>
+                        </div>
+                        <div class="col-md-5 col-sm-12 col-xs-12"></div>
+                    </div>
+                </div>
+            </div>
+            <section class="section section-whyus">
+                <div class="section-content">
+                    <h3>Tại sao lại chọn PhongTroThanhXuan.com?</h3>
+                    <p>Chúng tôi biết bạn có rất nhiều lựa chọn, nhưng PhongTroThanhXuan.com tự hào là trang web đứng top
+                        google về các từ khóa: <a href="https://PhongTroThanhXuan.com/cho-thue-phong-tro"
+                            title="Cho thuê phòng trọ"><strong>cho thuê phòng trọ</strong></a>, <strong>nhà
+                            trọ</strong>, <a href="https://PhongTroThanhXuan.com/nha-cho-thue"
+                            title="Cho thuê nhà nguyên căn"><strong>thuê nhà nguyên căn</strong></a>, <a
+                            href="https://PhongTroThanhXuan.com/cho-thue-can-ho" title="Cho thuê căn hộ"><strong>cho thuê căn
+                                hộ</strong></a>, <a href="https://PhongTroThanhXuan.com/tim-nguoi-o-ghep"
+                            title="Tìm người ở ghép"><strong>tìm người ở ghép</strong></a>, <a
+                            href="https://PhongTroThanhXuan.com/cho-thue-mat-bang" title="Cho thuê mặt bằng"><strong>cho thuê
+                                mặt bằng</strong></a>...Vì vậy tin của bạn đăng trên website sẽ tiếp cận được với nhiều
+                        khách hàng hơn, do đó giao dịch nhanh hơn, tiết kiệm chi phí hơn</p>
+                    <div class="whyus-countup clearfix">
+                        <div class="whyus-countup-item"><span class="whyus-countup-item-number">70.000+</span><span
+                                class="whyus-countup-item-text">Thành viên</span></div>
+                        <div class="whyus-countup-item"><span class="whyus-countup-item-number">100.000+</span><span
+                                class="whyus-countup-item-text">Tin đăng</span></div>
+                        <div class="whyus-countup-item"><span class="whyus-countup-item-number">300.000+</span><span
+                                class="whyus-countup-item-text">Lượt truy cập/tháng</span></div>
+                        <div class="whyus-countup-item"><span class="whyus-countup-item-number">2.500.000+</span><span
+                                class="whyus-countup-item-text">Lượt xem/tháng</span></div>
+                    </div>
+                    <h3>Chi phí thấp, hiệu quả tối đa</h3>
+                    <div class="clearfix" style="display: flex; justify-content: center;"><span
+                            class="star star-5"></span></div>
+                    <p class="testimonial">Trước khi biết website PhongTroThanhXuan, mình phải tốn nhiều công sức và chi phí
+                        cho việc đăng tin cho thuê: từ việc phát tờ rơi, dán giấy, và đăng lên các website khác nhưng
+                        hiệu quả không cao. Từ khi biết website PhongTroThanhXuan.com, mình đã thử đăng tin lên và đánh giá
+                        hiệu quả khá cao trong khi chi phí khá thấp, không còn tình trạng phòng trống kéo dài - Anh
+                        Khánh (chủ hệ thống phòng trọ tại Tp.HCM)</p>
+                    <h3>Bạn đang có phòng trọ / căn hộ cho thuê?</h3>
+                    <p>Không phải lo tìm người cho thuê, phòng trống kéo dài</p><a class="btn red"
+                        style="padding: 10px 30px;" rel="nofollow"
+                        href="https://PhongTroThanhXuan.com/quan-ly/dang-tin-moi.html">Đăng tin ngay</a>
+                </div>
+            </section>
+            <section class="section section-support">
+                <div class="section-content clearfix">
+                    <div class="support-bg"></div>
+                    <div class="list-support clearfix">
+                        <div class="list-support-title">Liên hệ với chúng tôi nếu bạn cần hỗ trợ:</div>
+                        <div class="support-item"><span class="support-item-title">Hỗ trợ thanh toán</span><a
+                                rel="nofollow" href="tel:0917686101">Điện thoại: 0917686101</a><a rel="nofollow"
+                                target="_blank" href="https://zalo.me/0917686101">Zalo: 0917686101</a></div>
+                        <div class="support-item"><span class="support-item-title">Hỗ trợ đăng tin</span><a
+                                rel="nofollow" href="tel:0902657123">Điện thoại: 0902657123</a><a rel="nofollow"
+                                target="_blank" href="https://zalo.me/0902657123">Zalo: 0902657123</a></div>
+                        <div class="support-item"><span class="support-item-title">Hotline 24/7</span><a rel="nofollow"
+                                href="tel:0917686101">Điện thoại: 0917686101</a><a rel="nofollow" target="_blank"
+                                href="https://zalo.me/0917686101">Zalo: 0917686101</a></div><a
+                            class="btn btn-page-contact" rel="nofollow" href="https://PhongTroThanhXuan.com/lien-he">Gửi liên
+                            hệ</a>
+                    </div>
+                </div>
+            </section>
+        </main>
+    </div>
+</div>
