--- a/src/app/admin/article-manager/view-article/view-article.component.html
+++ b/src/app/admin/article-manager/view-article/view-article.component.html
@@ -123,6 +123,28 @@
                                 </tr>
                             </tbody>
                         </table>
+                        <nav aria-label="Page navigation example">
+                            <ul class="pagination">
+                              <li class="page-item">
+                                <a class="page-link" href="#" aria-label="Previous">
+                                  <span aria-hidden="true">&laquo;</span>
+                                  <span class="sr-only">Previous</span>
+                                </a>
+                              </li>
+                              <li class="page-item"><a class="page-link" routerLink="/admin/article" (click)="onPage(0)">1</a></li>
+                              <li class="page-item"><a class="page-link" routerLink="/admin/article" (click)="onPage(1)">2</a></li>
+                              <li class="page-item"><a class="page-link" routerLink="/admin/article" (click)="onPage(2)">3</a></li>
+                              <li class="page-item"><a class="page-link" routerLink="/admin/article" (click)="onPage(3)">4</a></li>
+                              <li class="page-item"><a class="page-link" routerLink="/admin/article" (click)="onPage(4)">5</a></li>
+                              <li class="page-item"><a class="page-link" routerLink="/admin/article" (click)="onPage(5)">6</a></li>
+                              <li class="page-item">
+                                <a class="page-link" href="#" aria-label="Next">
+                                  <span aria-hidden="true">&raquo;</span>
+                                  <span class="sr-only">Next</span>
+                                </a>
+                              </li>
+                            </ul>
+                          </nav>
                     </div>
                 </div>
             </main>
